scrollbar no longer appears at the bottom when text goes offscreen

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -24,6 +24,8 @@ body
     justify-content: space-between;
 
     border-top: 2px solid;
+
+    overflow: hidden;
 }
 
 p
